--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,19 +21,20 @@ jobs:
         run: |
           VERSION=$(jq -r '.version' extension/manifest.json)
           EXT=$(jq -r '.browser_specific_settings.gecko.id' extension/manifest.json)
-          cat <<EOF > output/updates.json {
-            "addons": {
-              "$EXT": {
-                "updates": [
-                  {
-                    "version": "$VERSION",
-                    "update_link": "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/release.xpi"
-                  }
-                ]
-              }
-            }
-          }
-          EOF
+          cat <<EOF > output/updates.json
+{
+  "addons": {
+    "$EXT": {
+      "updates": [
+        {
+          "version": "$VERSION",
+          "update_link": "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/release.xpi"
+        }
+      ]
+    }
+  }
+}
+EOF
       
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
