--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           zip -r ../output/release.xpi ./*
           cd ..
 
-      - name: updates.json
+      - name: updates.json and Deploy
         run: |
           VERSION=$(jq -r '.version' extension/manifest.json)
           EXT=$(jq -r '.browser_specific_settings.gecko.id' extension/manifest.json)
@@ -39,23 +39,15 @@ jobs:
             }
           }
           EOF
-      
-      - name: Deploy
-        run: |
+
           cat output/updates.json
           git config --global url."https://${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
           git config --global user.name = "autobuild"
-          git config --global user.email = "none@autobuild"
+          git config --global user.email = "github-actions[bot]@users.noreply.github.com"
           git checkout -b versions
           git rm -rf . || true
-          ls
-          ls output
           cp -r output/* .
-          ls
-          ls output
           rm -r output
           git add .
-          git commit -m "new release"
+          git commit -m "release $VERSION"
           git push --force origin versions
-          ls
-          ls output
