--- a/manifest_main.json
+++ b/manifest_main.json
@@ -1,12 +1,12 @@
 {
 	"manifest_version": 3,
-	"name": "YTMUSIC TEST",
-	"version": "1.1",
+	"name": "YTMUSIC Fixer",
+	"version": "2.32",
   
-	"description": "TEST BUILD: Provides additional features to the Youtube Music site.",
+	"description": "Provides additional features to the Youtube Music site.",
 
 	"icons": {
-		"96": "icons/testlogo.png"
+		"96": "icons/musicemoji.png"
 	},
 
 	"content_scripts": [
@@ -29,28 +29,32 @@
 
 	"web_accessible_resources": [{
 		"matches": ["*://music.youtube.com/*"],
-			"resources": ["utils.js"]
+		"resources": ["utils.js"]
 	}],
+
+	"host_permissions": [
+		"*://music.youtube.com/*"
+	],
 
 	"permissions": [
 		"tabs",
 		"storage",
 		"activeTab",
 		"unlimitedStorage",
-		"scripting",
-		"music.youtube.com/*"
+		"scripting"
 	],
 
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "sitefixer@test",
-			"strict_min_version": "42.0"
+			"id": "sitefixer@ultra",
+			"strict_min_version": "42.0",
+			"update_url": "https://gjspy.github.io/music-plus/updates.json"
 		}
 	},
 
 	"action": {
-		"default_icon":"icons/testlogo.png",
-		"default_title":"YTMUSIC Test",
-		"default_popup":"popup/index.html"
+		"default_icon": "icons/musicemoji.png",
+		"default_title": "YTMUSIC+",
+		"default_popup": "popup/index.html"
 	}	  
 }
