--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,13 @@ jobs:
     
       - name: Swap main/test manifest
         run: |
+          git fetch origin
           mv extension/manifest.json manifest_test.json
           mv manifest_main.json extension/manifest.json
           git config --global url."https://${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
           git config --global user.name = "autobuild"
           git config --global user.email = "github-actions[bot]@users.noreply.github.com"
+          git add .
           git commit --amend --no-edit
 
   build:
