--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,13 @@ jobs:
           git config --global user.name = "autobuild"
           git config --global user.email = "github-actions[bot]@users.noreply.github.com"
           git add .
+          git push origin
           git commit -m "fixed thing"
           cat extension/manifest.json
 
   build:
     runs-on: ubuntu-latest
+    needs: manifest
 
     steps:
       - name: Checkout
