didnt git push correctly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,9 @@ jobs:
           mv extension/manifest.json manifest_test.json -f
           mv manifest_main.json extension/manifest.json -f
           git add .
-          git push origin main
           git commit -m "fixed thing"
+          git push --force origin main
+          ls
           cat extension/manifest.json
 
   build:
