--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,12 +1,12 @@
 {
 	"manifest_version": 3,
-	"name": "YTMUSIC TEST",
-	"version": "1.1",
+	"name": "YTMUSIC Fixer",
+	"version": "2.32",
   
-	"description": "TEST BUILD: Provides additional features to the Youtube Music site.",
+	"description": "Provides additional features to the Youtube Music site.",
 
 	"icons": {
-		"96": "icons/testlogo.png"
+		"96": "icons/musicemoji.png"
 	},
 
 	"content_scripts": [
@@ -46,14 +46,15 @@
 
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "sitefixer@test",
-			"strict_min_version": "42.0"
+			"id": "sitefixer@ultra",
+			"strict_min_version": "42.0",
+			"update_url": "https://gjspy.github.io/music-plus/updates.json"
 		}
 	},
 
 	"action": {
-		"default_icon":"icons/testlogo.png",
-		"default_title":"YTMUSIC Test",
-		"default_popup":"popup/index.html"
+		"default_icon": "icons/musicemoji.png",
+		"default_title": "YTMUSIC+",
+		"default_popup": "popup/index.html"
 	}	  
 }
