--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,31 +5,16 @@ on:
     branches: [main]
   
 jobs:
-  manifest:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-    
-      - name: Swap main/test manifest
-        run: |
-          git config --global url."https://${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
-          git config --global user.name = "autobuild"
-          git config --global user.email = "github-actions[bot]@users.noreply.github.com"
-          git fetch origin main
-          cp manifest_main.json extension/manifest.json -f
-          git add .
-          git commit --amend --no-edit
-          git push --force origin main
-
   build:
     runs-on: ubuntu-latest
-    needs: manifest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Ensure is prod manifest, not test
+        run: |
+          mv manifest_main.json extension/manifest.json -f
       
       - name: Zip
         run: |
@@ -59,7 +44,6 @@ jobs:
           }
           EOF
 
-          cat output/updates.json
           git config --global url."https://${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
           git config --global user.name = "autobuild"
           git config --global user.email = "github-actions[bot]@users.noreply.github.com"
