album skips, album metadata, cleaned miniGuide

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -41,7 +41,9 @@
 		"storage",
 		"activeTab",
 		"unlimitedStorage",
-		"scripting"
+		"scripting",
+		"theme",
+		"menus"
 	],
 
 	"browser_specific_settings": {
