started custom play counts

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -36,6 +36,10 @@
 		"*://music.youtube.com/*"
 	],
 
+	"options_ui": {
+		"page": "popup/index.html"
+	},
+
 	"permissions": [
 		"tabs",
 		"storage",
