--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,16 @@
 {
 	"typeAcquisition": {
 		"include": ["firefox-webext-browser"]
-	}
+	},
+	"compilerOptions": {
+		"checkJs": true,
+		"alwaysStrict": true,
+		"target": "es2022",
+		"module": "nodenext",
+		"moduleResolution": "nodenext",
+		"lib": ["DOM", "DOM.Iterable", "es2022"],
+		"types": ["firefox-webext-browser"],
+		"noImplicitAny":null
+	},
+	"include": ["**/*.d.ts", "**/*.js"]
 }
